--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,103 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+:root{
+  /* dark shades of primary color*/
+  --clr-primary-1: hsl(205, 86%, 17%);
+  --clr-primary-2: hsl(205, 77%, 27%);
+  --clr-primary-3: hsl(205, 72%, 37%);
+  --clr-primary-4: hsl(205, 63%, 48%);
+  /* primary/main color */
+  --clr-primary-5: hsl(205, 78%, 60%);
+  /* lighter shades of primary color */
+  --clr-primary-6: hsl(205, 89%, 70%);
+  --clr-primary-7: hsl(205, 90%, 76%);
+  --clr-primary-8: hsl(205, 86%, 81%);
+  --clr-primary-9: hsl(205, 90%, 88%);
+  --clr-primary-10: hsl(205, 100%, 96%);
+  /* darkest grey - used for headings */
+  --clr-grey-1: hsl(209, 61%, 16%);
+  --clr-grey-2: hsl(211, 39%, 23%);
+  --clr-grey-3: hsl(209, 34%, 30%);
+  --clr-grey-4: hsl(209, 28%, 39%);
+  /* grey used for paragraphs */
+  --clr-grey-5: hsl(210, 22%, 49%);
+  --clr-grey-6: hsl(209, 23%, 60%);
+  --clr-grey-7: hsl(211, 27%, 70%);
+  --clr-grey-8: hsl(210, 31%, 80%);
+  --clr-grey-9: hsl(212, 33%, 89%);
+  --clr-grey-10: hsl(210, 36%, 96%);
+  --clr-white: #fff;
+  --clr-red-dark: hsl(360, 67%, 44%);
+  --clr-red-dark-hover: hsl(0, 77%, 54%);
+  --clr-red-light: hsl(360, 71%, 66%);
+  --clr-green-dark: hsl(125, 67%, 44%);
+  --clr-green-dark-hover: hsl(125, 70%, 51%);
+  --clr-green-light: hsl(125, 71%, 66%);
+  --clr-black: #222;
+  --spacing: 0.1rem;
+  --light-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+  --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+  --max-width: 1170px;
+  --fixed-width: 450px;
+  --clr-orange-1: hsl(12, 83%, 98%);
+  --clr-orange-2: hsl(14, 91%, 95%);
+  --clr-orange-3: hsl(12, 89%, 89%);
+  --clr-orange-4: hsl(13, 87%, 82%);
+  --clr-orange-5: hsl(13, 88%, 68%);
+  --clr-orange-6: hsl(13, 88%, 55%);
+  --clr-orange-7: hsl(13, 74%, 49%);
+  --clr-orange-8: hsl(13, 74%, 33%);
+  --clr-orange-9: hsl(13, 73%, 25%);
+  --clr-orange-10: hsl(13, 73%, 16%);
+
+  --radius: 0.25rem;
+  --radius-1: 1em;
+  --transition: all 0.15s linear;
+}
+
+
+.btn {
+  background-color: var(--clr-grey-8);
+  color: var(--clr-black);
+  border: none;
+  
+  font-size: 1.2em;
+  text-transform: capitalize;
+  
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
+  border-radius: 0.7em;
+  
+  transition: var(--transition);
+}
+
+.btn:hover {
+  background-color: var(--clr-grey-9);
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-color: var(--clr-primary-4);
+  color: white;
+}
+.btn-primary:hover {
+  background-color: var(--clr-primary-3);
+  color: white;
+}
+
+.btn-success {
+  color: white;
+  background-color: var(--clr-green-dark);
+}
+.btn-success:hover {
+  background-color: var(--clr-green-dark-hover);
+}
+.btn-dark {
+  color: white;
+  background-color: var(--clr-red-dark);
+}
+.btn-dark:hover {
+  background-color: var(--clr-red-dark-hover);
+}
