--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
     --primary-green-3: #1CB361;
     --primary-green-4: #0b572d;
     --gray: #757575;
+
+    --simple-red: #F70432;
+    --default-border: 1px solid black;
 }
 
 * {
@@ -12,7 +15,64 @@
     margin: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Signika+Negative&display=swap');
+
+body {
+    font-family: 'Signika Negative', sans-serif;
+}
 
 /* Fonts */
 
 
+.header-section {
+    font-family: 'Signika Negative', sans-serif;
+    /* border: var(--default-border); */
+    width: 100%;
+    height: fit-content;
+
+    padding: 4em 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.none-link {
+    color: var(--clr-black);
+    text-decoration: none;
+}
+
+/*---------BUTTONS---------*/
+
+.btn {
+    background-color: var(--clr-grey-8);
+    color: var(--clr-black);
+    border: none;
+
+    width: max-content;
+    font-size: 1em;
+    
+    padding: 0.5em 1em;
+    border-radius: 0.7em;
+    
+    transition: var(--transition);
+  }
+  
+  .btn:hover {
+    background-color: var(--clr-grey-9);
+    cursor: pointer;
+  }
+  
+  .btn-green {
+    background-color: var(--primary-green-2);
+    color: black;
+  }
+  .btn-green:hover {
+    background-color: var(--primary-green-3);
+    color: white;
+  }
+
+  .btn-green:hover>* {
+    color: white;
+  }
