--- a/src/Pages/css/Home.css
+++ b/src/Pages/css/Home.css
@@ -1,10 +1,10 @@
+.home {
+    width: 100%;
+}
+
 .home-img {
     height: 35em;
     width: 100%;
-    
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
 }
 
 .header-100>.title {
