--- a/src/Pages/css/ErrorPage.css
+++ b/src/Pages/css/ErrorPage.css
@@ -10,7 +10,7 @@
     border-radius: var(--radius);
 }
 
-.message-container {
+.hero-error .message-container {
     /* background-color: var(--simple-blue); */
 
     display: flex;
