--- a/src/Components/css/Navbar.css
+++ b/src/Components/css/Navbar.css
@@ -2,32 +2,76 @@
 @import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap');
 
 .navbar {
-    --paddingNavbar: 4em;
+    --paddingNavbar: 1em;
+    --heightNavbar: 9em;
+    --calc-padding-top: calc( var(--heightNavbar)*0.125 );
+
+    position: relative;
 
     width: 100%;
-    height: 6em;
+    height: var(--heightNavbar);
 
-    padding: 0 var(--paddingNavbar);
+    padding: var(--calc-padding-top) var(--paddingNavbar);
 
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 
     background-color: var(--primary-green-3);
 }
 
 .logo {
-    font-size: 2em;
+    font-size: 1.4em;
     color: var(--clr-white);
 
     font-family: 'Gloria Hallelujah', cursive;
 }
 
 .menu {
-    --menuWidth: 5em;
+    --menuWidth: 3em;
 
     color: var(--clr-white);
 
     font-size: var(--menuWidth);
     /* height: calc( var(--menuWidth) / 1.136 ); */
+}
+
+@media only screen and (min-width:430px) {
+    .navbar {
+        --paddingNavbar: 2em;
+        --heightNavbar: 12em;
+    }
+
+    .logo {
+        font-size: 2em;
+    }
+    
+    .menu {
+        --menuWidth: 5em;
+    }
+}
+
+@media only screen and (min-width:540px) {
+    .navbar {
+        justify-content: space-around;
+    }
+}
+
+@media only screen and (min-width:768px) {
+    .navbar {
+        --paddingNavbar: 2em;
+        --heightNavbar: 6em;
+
+        justify-content: space-between;
+        align-items: center;
+    }
+}
+@media only screen and (min-width:992px) {
+    .navbar {
+        --paddingNavbar: 4em;
+        --heightNavbar: 6em;
+
+        justify-content: space-between;
+        align-items: center;
+    }
 }
