--- a/src/Components/css/Navbar.css
+++ b/src/Components/css/Navbar.css
@@ -7,6 +7,7 @@
     --calc-padding-top: calc( var(--heightNavbar)*0.125 );
 
     position: relative;
+    z-index: 10;
 
     width: 100%;
     height: var(--heightNavbar);
